objects/Zuora__SubscriptionProductFeature__c.object
<CustomObject>
    <description>subscription product feature is used to query the feature under the subscription&apos;s rate plan.</description>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__FeatureCode__c</fullName>
        <label>Feature Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__FeatureDescription__c</fullName>
        <label>Feature Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__FeatureName__c</fullName>
        <label>Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductEffectiveEndDate_Product__c</fullName>
        <formula>Zuora__Product__r.Zuora__EffectiveEndDate__c</formula>
        <label>Product Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductEffectiveEndDate__c</fullName>
        <label>Product Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductNameProduct__c</fullName>
        <formula>Zuora__Product__r.Name</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductSKU_Product__c</fullName>
        <formula>Zuora__Product__r.Zuora__SKU__c</formula>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductSKU__c</fullName>
        <label>Product SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ProductZuoraId__c</fullName>
        <label>Product ZuoraId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Zuora__Product__c</referenceTo>
        <relationshipLabel>Subscription Product Features</relationshipLabel>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanDescription__c</fullName>
        <label>RatePlan Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanEffectiveEndDate__c</fullName>
        <label>RatePlan Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanName__c</fullName>
        <label>RatePlan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RatePlanZuoraId__c</fullName>
        <description>This field holds rateplan id.</description>
        <externalId>true</externalId>
        <label>RatePlan ZuoraId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Subscription__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipName>Subscription_Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription Product Feature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>